c/src/test/resources/c/mini_bnc/valid/arrayVarSize.c
int main(int N) {
  char data[3][N];
  ASSERT(sizeof(data) == sizeof(char) * N * 3);
  return 0;
}
